# rust_learning

./: Cargo.toml  README.md  local.yml  test.yml
.cargo/: config.toml
api/: Cargo.toml
api/src/: error.rs  lib.rs  swagger.rs
api/src/user/: create.rs  delete.rs  mod.rs  read.rs  update.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  management.rs
common/src/user/: mod.rs  userable.rs
entity/: Cargo.toml
entity/src/: lib.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231029_000001_create_user_table.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
service-config/: Cargo.toml
service-config/src/: lib.rs
service-local/: Cargo.toml
service-local/src/: error.rs  lib.rs
service-local/src/user/: mod.rs
