[package]
name = "api"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.1", default-features = false, features = ["macros"] }
chrono = "0.4.31"
serde = "1.0.195"
uuid = { version = "1.7.0", features = ["v4"] }
common = { path = "../common" }
services_local = { path = "../service-local" }
sea-orm = "0.12.11"
serde_json = "1.0.111"
mime = "0.3.17"
thiserror = "1.0.56"
utoipa = { version = "4.2.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
service_config = { path = "../service-config"}
migration = { path = "../migration" }
futures = "0.3.30"
inventory = "0.3.15"
log = "0.4.20"
