[package]
name = "common"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.77"
chrono = "0.4.31"
erased-serde = "0.4.2"
thiserror = "1.0.56"
