[package]
name = "server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.4.1", features = ["rustls"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.6.1", features = ["v4"] }
serde = { version = "1.0.195", features = ["derive"] }
sea-orm = "0.12.11"
chrono = "0.4.31"
api = { path = "../api"}
migration = { path = "../migration" }
env_logger = "0.11.0"
service_config = { path = "../service-config"}
log = "0.4.20"

[dev-dependencies]
inventory = "0.3.15"